# bag_recorder

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/bag_recorder/: bag_recorder.hpp  recorder.hpp  topic_subscriber.hpp
src/: bag_recorder.cpp
